<resources>

    <string name="app_name">miou</string>
	<string name="gen_map_start">开始</string>
	<string name="gen_map_stop">停止</string>
	<string name="gen_map_review">回放</string>
	<string name="gen_map_is_logging">是否记录日志</string>
	
	<string name="search_hint">搜索......</string>
	<string name="dialog_station_picker">选择基站</string>
	<string name="single_is_logging">记录日志</string>
	<string name="single_review">回放日志</string>
	<string name="single_new">新建站点</string>
	<string name="single_current_hint">当前基站：</string>
	<string name="single_assigned_test">小区测试</string>
	<string name="single_normal_test">常规测试</string>
	<string name="no_station_selected">没有选择基站</string>
	<string name="station_select">选择基站</string>
	<string name="single_point_test">定点测试</string>
	<string name="single_end_test">结束测试</string>
	
	<string name="undo">撤销</string>
	<string name="selected">已选</string>
	<string name="all_show">全部显示</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="done">完成</string>
	<string name="gen_title">通用测试</string>
	<string name="innner_title">室内测试</string>
	<string name="single_title">单验测试</string>
	<string name="pref_title">设置</string>
	<string name="pref_line_title">曲线设置</string>
	<string name="pref_warning_title">告警设置</string>
	<string name="pref_sign_title">图例设置</string>
	<string name="pref_filter_title">信令筛选设置</string>
	<string name="pref_map_title">地图设置</string>
	
	<string name="pref_idle_title">空闲测试</string>
	<string name="pref_voice_title">语音测试</string>
	<string name="pref_volte_title">VOLTE测试</string>
	<string name="pref_video_title">视频测试</string>
	<string name="pref_ping_title">PING测试</string>
	<string name="pref_pdp_title">PDP测试</string>
	<string name="pref_attach_title">ATTACH测试</string>
	<string name="pref_ftp_title">FTP测试</string>
	<string name="pref_server_title">FTP服务器设置</string>
	<string name="pref_mail_title">邮件测试</string>
	<string name="pref_sms_title">短信测试</string>
	<string name="pref_wap_title">WAP测试</string>
	<string name="pref_stream_title">流媒体测试</string>
	<string name="pref_file_select_title">文件选择</string>
	<string name="pref_http_title">HTTP测试</string>
	
	<string name="gen_map_signal_detail_title">层三详细解码</string>
	<string name="gen_map_title_script_button">脚本</string>
	<string name="gen_map_title_export_button">导出</string>
	<string name="dialog_label_info_title">请输入标注信息</string>
	
	<string name="dialog_log_picker">选择日志</string>	
	<string name="dialog_building_picker">选择建筑物</string>
	<string name="dialog_param_picker">选择参数</string>
	
	<string name="add_testing_plan">添加</string>
	<string name="delete_testing_plan">删除</string>
	<string name="gen_script_title">测试脚本设置</string>
	<string name="gen_script_save_button">保存</string>
	<string name="increase">+</string>
	<string name="decrease">-</string>
	<string name="cell_info">服务小区和邻小区信息</string>
	<string name="params">指标呈现</string>
	<string name="host">222.68.172.8:3000</string>
	
	<string name="cover_trace_check_box">覆盖轨迹</string>
	<string name="quality_trace_check_box">质量轨迹</string>
	<string name="speed_trace_check_box">速度轨迹</string>
	<string name="station_check_box">基站显示</string>
	<string name="station_info_check_box">基站信息</string>
	<string name="line_check_box">连线显示</string>
	
	<string name="page_onekey">一键测试</string>
    <string name="page_task">任务测试</string>
    <string name="page_result">测试结果</string>
    <string name="page_signal">信令回溯</string>
	
    <string name="latitude">经度</string>
    <string name="longitude">纬度</string>
    <string name="friend_name">友好名</string>
    <string name="s1">s1</string>
    <string name="s2">s2</string>
    <string name="s3">s3</string>
    <string name="pci">PCI</string>
    <string name="frequency">频点</string>
    <string name="ci">CI</string>
    
    <string name="hint_latitude">请输入以小数表示的经度</string>
    <string name="hint_longitude">请输入以小数表示的纬度</string>
    <string name="hint_station_name">请输入基站名称</string>
    <string name="warning_blank_name">基站名称为空！</string>
    <string name="warning_blank_position">位置信息为空或无效！</string>
    
    <string name="list_header_station">站点名称</string>
    <string name="list_header_time">测试时间</string>
    <string name="list_header_rsrp">RSRP</string>
    <string name="list_header_sinr">SINR</string>
    <string name="list_header_ftp_dl">FTP下载</string>
    <string name="list_header_ftp_ul">FTP上传</string>
    <string name="list_header_ping">PING</string>
    <string name="list_header_csfb">CSFB</string>
    
    <string name="cell_info_hint">服务小区与邻小区信息-</string>
    <string name="lte">LTE</string>
    <string name="td">TD</string>
    <string name="gsm">GSM</string>
    <string name="temp_value">-</string>
    <string name="serving_cell_info">服务小区信息</string>
    
    <string name="warning_input">输入的信息有误!</string>
    <string name="warning_no_negative">输入的数值不能为负值!</string>
    <string name="warning_no_number">输入的内容无效!</string>
    <string name="warning_no_telephone">输入的内容不是一个有效的手机号码!</string>
    <string name="warning_no_ip">输入的内容不是一个有效的IP地址</string>
    <string name="warning_no_email">输入的内容不是一个有效的EMAIL地址</string>
    
    <string name="save_ok">保存成功!</string>
    <string name="resumeMessage">test is running.</string>
    <string name="pauseMessage">test is paused.</string>
    <string name="httpMethodLabel">HTTP Method</string>
    <string name="httpGetRadioText">Get</string>
    <string name="httpHeadRadioText">Head</string>
    <string name="httpUrlHint">www.google.com</string>
    <string name="httpUrlLabel">URL Address</string>
    <string name="checkinIntervalPrefKey">KEY_CHEKCEDIN_INTERVAL</string>
    <string name="measureWhenPluggedPrefKey">KEY_MEASURE_WHEN_PLUGGED</string>
    <string name="batteryMinThresPrefKey">KEY_BATTERY_THRES</string>
    <string name="startOnBootPrefKey">KEY_START_ON_BOOT</string>
    <string name="notificationSchedulerStarted">Speedometer service has started</string>
    <string name="notificatioContent">Speedometer service is running</string>
    <string name="userMeasurementSuccessToast">Measurement is running. Results will show up shortly.</string>
    <string name="userMeasurementFailureToast">The scheduler is busy, please run the measurement later</string>
    <string name="userMeasurementBusySchedulerToast">The scheduler is busy, your measurement will start shortly</string>
    <string name="invalidUserMeasurementInputToast">Some parameters are not correct. Please make sure all measurement parameters are set properly.</string>
    <string name="invalidCheckinIntervalToast">Invalid setting! Please choose an interval between 1 and 24 hours</string>
    <string name="invalidBatteryToast">Invalid setting! Please choose a battery level between 0 and 100 percent</string>
    <string name="menuInitializationExceptionToast">Exception occurs during menu initialization.</string>
    <string name="idleTextForUserConsoleStatusBar">There is no measurement running.</string>
    <string name="powerThreasholdReachedMsg">Measurement paused - below battery threshold</string>
</resources>
