<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="5dp">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="1dp" 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/gray" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="1"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/list_header_station" 
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="10dp" >
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/list_header_time" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold" >
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/list_header_rsrp" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold" >
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/list_header_sinr" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold" >
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/list_header_ftp_dl" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold" >
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/list_header_ftp_ul" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold">
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/list_header_ping" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold" >
            
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/list_header_csfb" 
            android:gravity="center"
            android:textSize="10dp"
            android:textStyle="bold">
            
        </TextView>
    </LinearLayout>

    <ListView 
        android:id="@+id/data_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        
    </ListView>

</LinearLayout>
