<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" >
    	
        <EditText 
            android:id="@+id/search_edit_text"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="5dp"
    		android:layout_alignParentLeft="true"
    		android:layout_toLeftOf="@+id/search_button" 
    		android:hint="@string/search_hint"/>
        <Button 
            android:id="@id/search_button"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:layout_alignParentRight="true"
    		android:layout_centerVertical="true"
    		android:background="@android:drawable/ic_menu_search"/>
    </RelativeLayout>
    <ListView 
        android:id="@+id/list_view"
        android:layout_width="match_parent"
    	android:layout_height="300dp" >
        
    </ListView>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="1" 
    	android:gravity="center" >
        <Button 
            android:id="@+id/undo_button"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.25"
    		android:scaleX="0.8"
    		android:scaleY="0.8"
    		android:text="@string/undo"
    		style="@style/button" />
        <Button 
            android:id="@+id/selected_button"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.25"
    		android:scaleX="0.8"
    		android:scaleY="0.8" 
    		android:text="@string/selected" 
    		style="@style/button" />
        <Button 
            android:id="@+id/done_button"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.25" 
    		android:scaleX="0.8"
    		android:scaleY="0.8"
    		android:text="@string/done" 
    		style="@style/button" />
        <Button 
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.25" 
    		android:scaleX="0.8"
    		android:scaleY="0.8"
    		android:text="@string/cancel" 
    		style="@style/button" />
    </LinearLayout>

</LinearLayout>
