<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<com.datang.miou.widget.AppTitle
		android:id="@+id/gen_map_title" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<LinearLayout 
	    android:layout_width="match_parent"
		android:layout_height="30dp" 
		android:orientation="horizontal"
		android:weightSum="1" >
		<TextView 
		    android:layout_width="0dp"
			android:layout_height="wrap_content" 
			android:text="@string/single_is_logging" 
			android:layout_weight="0.2"
			android:layout_marginLeft="10dp" />
		<Button 
		    android:id="@+id/single_log_button"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.2"
		    android:layout_gravity="center" 
			android:scaleX="0.8"
			android:scaleY="0.8" />
		<Button
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.2"
		    android:visibility="invisible" />
		<Button
		    android:id="@+id/single_review_button"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/single_review" 
		    android:layout_weight="0.2"
		    android:gravity="center" 
			android:scaleX="0.8"
			android:scaleY="0.8" 
			style="@style/button" />
		<Button
		    android:id="@+id/single_new_button"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/single_new"
		    android:layout_weight="0.2"
		    android:gravity="center" 
			android:scaleX="0.8"
			android:scaleY="0.8"  
			style="@style/button" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
		android:layout_height="30dp" 
		android:orientation="horizontal" >
	    <TextView 
	        android:id="@+id/station_textview"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.4"
			android:layout_marginLeft="10dp" />
	    <Button 
	        android:id="@+id/station_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:scaleX="0.8"
			android:scaleY="0.8"
			android:layout_weight="0.2"
			android:gravity="center" 
			style="@style/button" 
			android:text="@string/station_select"/>
	    <Button
		    android:id="@+id/single_assigned_test_button"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/single_assigned_test"
		    android:layout_weight="0.2"
		    android:gravity="center" 
			android:scaleX="0.8"
			android:scaleY="0.8"  
			style="@style/button" />
	    <Button
		    android:id="@+id/single_normal_test_button"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:text="@string/single_normal_test"
		    android:layout_weight="0.2"
		    android:gravity="center" 
			android:scaleX="0.8"
			android:scaleY="0.8"  
			style="@style/button" />
	</LinearLayout>
	<FrameLayout 
	    android:id="@+id/gen_realtabcontent"
		android:layout_width="match_parent" 
		android:layout_height="0dip"
		android:layout_weight="1" />
	<android.support.v4.app.FragmentTabHost
		android:id="@+id/gen_tabhost" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:background="#333333">
		<FrameLayout 
		    android:id="@+id/gen_tabcontent"
			android:layout_width="0dp" 
			android:layout_height="0dp"
			android:layout_weight="0" />
	</android.support.v4.app.FragmentTabHost>
</LinearLayout>
